1. some translation update. 2. modify limitOverflowScience Decision condition.

--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -1,34 +1,20 @@
 
 # Tutorial tasks
 
- # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
- # Requires translation!
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
- # Requires translation!
-Enter the city screen!\nClick the city button twice = 
- # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
- # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
- # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
- # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
- # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
- # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
- # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
- # Requires translation!
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
- # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
- # Requires translation!
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 移动单位!\n点击一个单位 > 点击目的地 > 点击弹出的箭头图标确认移动
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 建立城市!\n选择移民(旗帜图标) > 点击"建立城市"(左下角)
+Enter the city screen!\nClick the city button twice = 进入城市界面!\n点击城市按钮两次
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究科技!\n点击科技按钮(左上方浅绿色图标) > \n选择一个科技 > 点击"研究"(右下角)
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 建造/组建项目!\n进入城市界面 > 在左侧列表中选择一个单位或建筑
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 跳过回合!\n连续点击"下个闲置单位"按钮跳过所有闲置单位 > 点击"下一回合"
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 重新调整工作地块!\n进入城市界面 > 点击已分配市民的地块取消分配 > \n 点击未被分配市民的地块分配市民
+Meet another civilization!\nExplore the map until you encounter another civilization! = 认识其他文明!\n探索地图直到你遇见另一个文明!
+Open the options table!\nClick the menu button (top left) > click 'Options' = 打开设置选项!\n点击菜单按钮(左上角) > 点击"选项"
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 建造地块设施!\n建造一个工人 > 移动工人至平原或草原地块 > \n 点击"建造设施"按钮(左下角) > 选择"农场" > \n 不向工人下达其他指令直至建造完成
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 建立贸易路线!\n建造道路连接你的首都和其他城市\n或将工人设置为"自动工作"，其将自动完成连接
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 占领城市!\n攻击敌方城市使其耐久降为1 > \n使用近战单位占领城市
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 移动空军单位!\n选择一个空军单位 > 选取移动范围内的其他城市 > \n将单位移至该城市
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 查看当前文明详细信息!\n点击概览按钮(右上角) >\n点击"统计"
 
 # Buildings
 
@@ -271,18 +257,17 @@ Relationship changes in another [turnsToRelationshipChange] turns = 将在[turns
 You declared war on us! = 不知死活的蠢货！你竟敢向我们宣战！
 Your warmongering ways are unacceptable to us. = 你的穷兵黩武行径是我们无法容忍的！
 You have captured our cities! = 多行不义必自毙！你竟敢占领我们的城市！
- # Requires translation!
-We applaud your liberation of our conquered cities! = 
+We applaud your liberation of our conquered cities! = 你解放我们被占领城市的行为让我们欢呼雀跃！
 Years of peace have strengthened our relations. = 多年的和平时光让我们更加珍视彼此的关系。
 Our mutual military struggle brings us closer together. = 共同的戎马岁月拉近了彼此的距离。
-We have signed a public declaration of friendship = 真是美好的一天！我们宣布：两个文明间将彼此尊重、相互友善！
-You have declared friendship with our enemies! = 渡尽劫波兄弟在，相逢一笑泯恩仇！我们宣布：冰释前嫌、携手前进！
-You have declared friendship with our allies = 兄弟齐心、其利断金！我们宣布：我们与盟友间兄弟般的友谊永世长存！
-Our open borders have brought us closer together. = 开放的边界促进了彼此的了解，让我们的人民心心相通！
+We have signed a public declaration of friendship = 我们签署了一份公开的友谊宣言！
+You have declared friendship with our enemies! = 你竟敢对我们的敌人表示友好！
+You have declared friendship with our allies = 你对我们的盟友表示了友好！
+Our open borders have brought us closer together. = 开放边界协定促进了彼此的了解，让我们的人民心心相通！
 Your so-called 'friendship' is worth nothing. = 你所谓的“友谊”一文不值。
-You have publicly denounced us! = 批判的武器不能代替武器的批判，谴责是无力的懦夫行为。
-You have denounced our allies = 对我们盟友的侮辱也是对我们的冒犯，请好自为之！
-You have denounced our enemies = 敌人的敌人就是朋友，你的谴责是维护公正的仗义执言，我们期待听到更多。
+You have publicly denounced us! = 批判的武器不能代替武器的批判，你对我们的谴责是懦夫行为。
+You have denounced our allies = 对我们盟友的谴责也是对我们的冒犯，请好自为之！
+You have denounced our enemies = 敌人的敌人就是朋友，你对我们敌人的谴责是维护公正的仗义执言。
 Demands = 要求
 Please don't settle new cities near us. = 请不要在我们附近建立新的城市。
 Very well, we shall look for new lands to settle. = 好的，我们将会寻找新的建城位置。
@@ -292,8 +277,7 @@ You fulfilled your promise to stop settling cities near us! = 感谢你履行了
 You refused to stop settling cities near us = 你拒绝停止在我们附近建城的决定是愚蠢的，好自为之！
 We noticed your new city near our borders, despite your promise. This will have....implications. = 尽管你答应了，我们还是注意到你在我们边境附近建立了新城市。如果有不好的影响...这将是你自找的！
 Your arrogant demands are in bad taste = 你的傲慢要求不合情理。
- # Requires translation!
-Your use of nuclear weapons is disgusting! = 
+Your use of nuclear weapons is disgusting! = 你使用核武器的行为是令人发指的！
 Cultured = 文化型
 Maritime = 航海型
 Mercantile = 商业型
@@ -392,12 +376,9 @@ Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. 
 Siam = 暹罗
 Ramkhamhaeng = 兰甘亨
 Food and Culture from Friendly City-States are increased by 50% = 友好城邦提供的食物和文化增加50%
- # Requires translation!
-Songhai = 
- # Requires translation!
-Askia = 
- # Requires translation!
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
+Songhai = 桑海
+Askia = 阿斯基亚
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 摧毁蛮族营地及劫掠城市时获得三倍金钱，单位船运时有自卫能力
 
 # New game screen
 
@@ -407,17 +388,12 @@ Barbarians = 蛮族
 Load copied data = 读取剪贴板中的游戏数据
 Could not load game from clipboard! = 无法从剪贴板中读取游戏!
 Start game! = 开始游戏！
- # Requires translation!
-Map options = 
- # Requires translation!
-Game options = 
-Map type = 地图类型
- # Requires translation!
-Generated = 
- # Requires translation!
-Existing = 
- # Requires translation!
-Map generation type = 
+Map options = 地图设置
+Game options = 游戏设置
+Map type = 地图创建方式
+Generated = 随机生成
+Existing = 文件载入
+Map generation type = 生成地图类型
 Number of city-states = 城邦数量
 One City Challenge = 单城市挑战
 No barbarians = 无蛮族
@@ -461,7 +437,7 @@ Copy Game ID = 复制游戏ID
 Set current user = 设置为当前玩家
 Player ID from clipboard = 从剪贴板获取玩家ID
 To create a multiplayer game, check the 'multiplayer' toggle in the New Game screen, and for each human player insert that player's user ID. = 创建多人游戏时，首先请选中“开始新游戏”界面的“在线多人游戏”复选框，同时将每个参与游戏的玩家ID填入其想扮演文明的“Player ID”文本框内。
-You can assign your own user ID there easily, and other players can copy their user IDs here and send them to you for you to include them in the game. = 直接点击“设置为当前玩家”就可自动填入你自己的玩家ID。对于其他玩家，他们可在终端上打开游戏并在当前界面点击“复制玩家ID”按钮将他们的ID复制到剪贴板，然后通过网络发送给你，你可以在“开始新游戏”界面将接收到的ID填入他们想扮演文明的“Player ID”文本框内使其加入游戏。
+You can assign your own user ID there easily, and other players can copy their user IDs here and send them to you for you to include them in the game. = 直接点击“设置为当前玩家”就可自动填入自己的玩家ID。其他玩家则需在打开游戏后点击“复制玩家ID”按钮将ID复制到剪贴板，然后通过网络发送给你，你可以在“开始新游戏”界面将接收到的ID填入他们想扮演文明的“Player ID”文本框内让他们加入游戏。
 Once you've created your game, enter this screen again to copy the Game ID and send it to the other players. = 当你创建了多人游戏后，进入此界面同时点击“复制游戏ID”按钮将游戏ID复制到剪贴板并通过网络发送给其他玩家。
 Players can enter your game by copying the game ID to the clipboard, and clicking on the Join Game button = 其他玩家可以将接收到的游戏ID复制到剪贴板，同时点击“加入游戏”按钮加入游戏
 Game Speed = 游戏速度
@@ -510,8 +486,7 @@ Auto-build roads = 自动建造道(铁)路
 Show minimap = 显示小地图
 Show pixel units = 显示像素单位
 Show pixel improvements = 显示像素设施
- # Requires translation!
-Enable nuclear weapons = 
+Enable nuclear weapons = 允许使用核武器
 Fontset = 字体设置
 
 # Notifications
@@ -530,8 +505,7 @@ Cannot provide unit upkeep for [unitName] - unit has been disbanded! = 无法为
 Work has started on [construction] = 开始建造/组建：[construction]
 [cityName] cannot continue work on [construction] = [cityName]无法继续建造/组建[construction]
 [cityname] has expanded its borders! = [cityname]的边界已扩张！
- # Requires translation!
-Your Golden Age has ended. = 
+Your Golden Age has ended. = 你的黄金时代结束了
 [cityName] has been razed to the ground! = [cityName]已被夷为平地！
 We have conquered the city of [cityname]! = 我们已经占领城市[cityname]！
 An enemy [unit] has attacked [cityname] = 敌方的[unit]攻击了[cityname]
@@ -573,8 +547,8 @@ You and [name] are no longer allies! = 您与[name]不再是盟友了！
 [cityName] has been disconnected from your capital! = [cityName]与您的首都的连接已经中断！
 [civName] has accepted your trade request = [civName]接受了您的贸易请求
 [civName] has denied your trade request = [civName]拒绝了您的贸易请求
-[tradeOffer] from [otherCivName] has ended = 与[otherCivName]的[tradeOffer]协议已经结束
-[tradeOffer] to [otherCivName] has ended = 与[otherCivName]的[tradeOffer]协议已经结束
+[tradeOffer] from [otherCivName] has ended = [otherCivName]向我们供应[tradeOffer]的协议已经结束
+[tradeOffer] to [otherCivName] has ended = 我们向[otherCivName]供应[tradeOffer]的协议已经结束
 One of our trades with [nation] has ended = 我们与[nation]的一项贸易已经结束
 One of our trades with [nation] has been cut short = 我们与[nation]的一项贸易已被削减
 [nation] agreed to stop settling cities near us! = [nation]同意停止在我们附近建城！
@@ -667,7 +641,7 @@ Specialist Allocation = 专业人员分配
 Specialists = 专业人员
 Food eaten = 人口消耗
 Growth bonus = 积累速率
-Unassigned population = 空闲人口
+Unassigned population = 闲置人口
 [turnsToExpansion] turns to expansion = 此城市将在[turnsToExpansion]回合后扩张
 Stopped expansion = 扩张已停止
 [turnsToPopulation] turns to new population = 此城市将在[turnsToPopulation]轮后有1个新市民
@@ -716,8 +690,7 @@ Landing = 登陆作战
 Flanking = 侧翼夹击
 vs [unitType] = 对战[unitType]
 Terrain = 地形修正
- # Requires translation!
-Hurry Research = 
+Hurry Research = 加速科技研究
 Conduct Trade Mission = 拓展贸易
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = 您与[civName]拓展贸易获得[goldAmount]金钱和[influenceAmount]影响力！
 Hurry Wonder = 加速奇观建造
@@ -1143,26 +1116,16 @@ Impassible = 不能通行
 
 # Natural Wonders
 
- # Requires translation!
-Barringer Crater = 
- # Requires translation!
-Grand Mesa = 
- # Requires translation!
-Great Barrier Reef = 
- # Requires translation!
-Krakatoa = 
- # Requires translation!
-Mount Fuji = 
- # Requires translation!
-Old Faithful = 
- # Requires translation!
-Rock of Gibraltar = 
- # Requires translation!
-Cerro de Potosi = 
- # Requires translation!
-El Dorado = 
- # Requires translation!
-Fountain of Youth = 
+Barringer Crater = 巴林杰陨石坑
+Grand Mesa = 大平顶山
+Great Barrier Reef = 大堡礁
+Krakatoa = 喀拉喀托火山
+Mount Fuji = 富士山
+Old Faithful = 老忠实间歇泉
+Rock of Gibraltar = 直布罗陀巨岩
+Cerro de Potosi = 富饶山
+El Dorado = 黄金国
+Fountain of Youth = 青春之泉
 
 # Resources
 
@@ -1357,16 +1320,14 @@ B17 = B-17“空中堡垒”
 Fighter = 战斗机
 Zero = 零式战斗机
 Helicopter Gunship = 武装直升机
- # Requires translation!
-Atomic Bomb = 
+Atomic Bomb = 原子弹
 Nuclear Missile = 核导弹
 Great Artist = 大艺术家
 Unbuildable = 不可组建单位
 Can start an 8-turn golden age = 可以开启8回合黄金时代
 Can build improvement: Landmark = 可以建造设施：风景地标
 Great Scientist = 大科学家
- # Requires translation!
-Can hurry technology research = 
+Can hurry technology research = 可以加速科技研究
 Can build improvement: Academy = 可以建造设施：学院
 Great Merchant = 大商业家
 Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = 可以拓展与城邦的贸易，获得大笔金钱和[influenceAmount]影响力
@@ -1466,5 +1427,4 @@ Ambush I = 伏击I级
 Ambush II = 伏击II级
 Haka War Dance = 哈卡战舞
 -10% combat strength for adjacent enemy units = 相邻的敌方单位-10%战斗力
- # Requires translation!
-Rejuvenation = 
+Rejuvenation = 返老還童
