--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -1,22 +1,20 @@
 
 # Tutorial tasks
 
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 移動你的人民!\n點擊一個單位 > 點擊其目的地 > 點擊確認箭頭前進
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 建立你的首都!\n選取移民(旗子圖樣單位) > 點擊"建立首都"(螢幕左下角)
-Enter the city screen!\nClick the city button twice = 進入城市介面!\n點擊城市兩下
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 選一個科技開始研究!\n點擊科技按鈕(左上方,綠色按鈕) > \n選擇一個科技 > 點擊"開始研究" (右下角) 
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 選一個設施開始建造!\n進入城市介面 > 點擊一個單位或建築 (畫面左邊)
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 跳過一回合!\n用"下一個單位"來循環你的單位 > 點擊"下一回合"
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 重新分配勞動人口!\n進入城市介面 > 點擊已被分配勞力的領域已取消分配 > \n 接著點擊未被分配勞力的領域已分配勞動人口
-Meet another civilization!\nExplore the map until you encounter another civilization! = 認識其他文明!\n探險地圖直到你遇見令一個文明!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 打開選項列表!\n點擊主畫面(左上角按鈕) > 典籍"選項"
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
- # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 佔領一座城市!\n攻擊敵方城市直到血量為零 > \n用近戰單位進入城市
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 移動你的空中單位!\n選取一個空中單位 > 選取一個範圍內的城市 > \n將單位移至此城市
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 看看你的數據分析!\n進入蓋覽介面(右上角按鈕) > \n點擊"遊戲數據"
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 移動單位!\n點擊一個單位 > 點擊目的地 > 點擊彈出的箭頭圖標確認移動
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 建立城市!\n選擇移民(旗幟圖標) > 點擊"建立城市"(左下角)
+Enter the city screen!\nClick the city button twice = 進入城市介面!\n點擊城市按鈕兩次
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究科技!\n點擊科技按鈕(左上方淺綠色圖標) > \n選擇一個科技 > 點擊"研究"(右下角) 
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 建造/組建項目!\n進入城市介面 > 在左側列表中選擇一個單位或建築
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 跳過回合!\n連續點擊"下個閒置單位"按鈕跳過所有閒置單位 > 點擊"下一回合"
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 重新調整工作地塊!\n進入城市介面 > 點擊已分配市民的地塊取消分配 > \n 點擊未被分配市民的地塊分配市民
+Meet another civilization!\nExplore the map until you encounter another civilization! = 認識其他文明!\n探索地圖直到你遇見另一個文明!
+Open the options table!\nClick the menu button (top left) > click 'Options' = 打開設置選項!\n點擊菜單按鈕(左上角) > 點擊"選項"
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 建造地塊設施!\n建造一個工人 > 移動工人至平原或草原地塊 > \n 點擊"建造設施"按鈕(左下角) > 選擇"農場" > \n 不向工人下達其他指令直至建造完成
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 建立貿易路線!\n建造道路連接你的首都和其他城市\n或將工人設置為"自動工作"，其將自動完成連接
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 佔領城市!\n攻擊敵方城市使其耐久降為1 > \n使用近戰單位佔領城市
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 移動空軍單位!\n選擇一個空軍單位 > 選取移動範圍內的其他城市 > \n將單位移至該城市
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 查看當前文明詳細信息!\n點擊概覽按鈕(右上角) >\n點擊"統計"
 
 # Buildings
 
@@ -259,18 +257,17 @@ Relationship changes in another [turnsToRelationshipChange] turns = 將在[turns
 You declared war on us! = 不知死活的蠢貨！你竟敢向我們宣戰！
 Your warmongering ways are unacceptable to us. = 你的窮兵黷武行竟是我們無法容忍的！
 You have captured our cities! = 多行不義必自斃！你竟敢佔領我們的城市！
- # Requires translation!
-We applaud your liberation of our conquered cities! = 
+We applaud your liberation of our conquered cities! = 你解放我們被佔領城市的行為让我们歡呼雀躍！
 Years of peace have strengthened our relations. = 多年的和平時光讓我們更加珍視彼此的關係。
 Our mutual military struggle brings us closer together. = 共同的戎馬歲月拉近了彼此的距離。
-We have signed a public declaration of friendship = 真是美好的一天！我們宣佈：兩個文明間將彼此尊重、相互友善！
+We have signed a public declaration of friendship = 我們之間簽署了一份公開的友誼宣言！
 You have declared friendship with our enemies! = 你竟敢對我們的敵人表示友好！
-You have declared friendship with our allies = 兄弟齊心、其力斷金！我們宣佈：我們與盟友間兄弟般的友誼永世長存！
-Our open borders have brought us closer together. = 開放的邊界促進了彼此的了解，讓我們的人民心心相通！
+You have declared friendship with our allies = 你對我們的盟友表示了友好！
+Our open borders have brought us closer together. = 開放邊界協定促進了彼此的了解，讓我們的人民心心相通！
 Your so-called 'friendship' is worth nothing. = 你所謂的“友誼”一文不值。
-You have publicly denounced us! = 批判的武器不能代替武器的批判，譴責是無力的懦夫行為。
-You have denounced our allies = 對我們盟友的汙辱也是對我們的冒犯，請好自為之！
-You have denounced our enemies = 敵人的敵人就是朋友，你的譴責是維護公正的仗義執言。
+You have publicly denounced us! = 批判的武器不能代替武器的批判，你對我們的譴責是懦夫行為。
+You have denounced our allies = 對我們盟友的譴責也是對我們的冒犯，請好自為之！
+You have denounced our enemies = 敵人的敵人就是朋友，你對我們敵人的譴責是維護公正的仗義執言！
 Demands = 要求
 Please don't settle new cities near us. = 請不要在我們附近建立新的城市。
 Very well, we shall look for new lands to settle. = 好的，我們將會尋找其他位置建立城市。
@@ -280,8 +277,7 @@ You fulfilled your promise to stop settling cities near us! = 感謝你履行了
 You refused to stop settling cities near us = 你拒絕停止在我們附近建立城市的決定是愚蠢的，好自為之！
 We noticed your new city near our borders, despite your promise. This will have....implications. = 儘管你答應了，我們還是注意到你在我們邊境附近建立了新城市。如果有不好的影響...這將是你自找的！
 Your arrogant demands are in bad taste = 你的傲慢要求不合情理。
- # Requires translation!
-Your use of nuclear weapons is disgusting! = 
+Your use of nuclear weapons is disgusting! = 你使用核武器的行為是令人髮指的！
 Cultured = 文化型
 Maritime = 航海型
 Mercantile = 商業型
@@ -380,9 +376,9 @@ Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. 
 Siam = 暹羅
 Ramkhamhaeng = 蘭甘亨
 Food and Culture from Friendly City-States are increased by 50% = 友好城邦提供的食物和文化增加50%
-Songhai = 桑海帝國
+Songhai = 桑海
 Askia = 阿斯基亞
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 能從蠻族營地與掠奪城市中獲得三倍金錢。單位船運時有自衛能力。
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 摧毀蠻族營地及劫掠城市時獲得三倍金錢，單位船運時有自衛能力
 
 # New game screen
 
@@ -392,17 +388,12 @@ Barbarians = 蠻族
 Load copied data = 讀取剪貼簿的遊戲存檔
 Could not load game from clipboard! = 無法從剪貼簿讀取存檔!
 Start game! = 開始遊戲！
- # Requires translation!
-Map options = 
- # Requires translation!
-Game options = 
-Map type = 地圖類型
- # Requires translation!
-Generated = 
- # Requires translation!
-Existing = 
- # Requires translation!
-Map generation type = 
+Map options = 地圖設置
+Game options = 遊戲設置
+Map type = 地圖創建方式
+Generated = 隨機生成
+Existing = 文件載入
+Map generation type = 生成地圖類型
 Number of city-states = 城邦數量
 One City Challenge = 單城市挑戰
 No barbarians = 無蠻族
@@ -446,8 +437,8 @@ Copy Game ID = 複製遊戲ID
 Set current user = 設定為目前玩家
 Player ID from clipboard = 從剪貼簿取得玩家ID
 To create a multiplayer game, check the 'multiplayer' toggle in the New Game screen, and for each human player insert that player's user ID. = 建立多人遊戲時，請先選擇“開始新遊戲”選單的“線上多人遊戲”，並將參與遊戲的玩家ID填入對應扮演的文明的“Player ID”文字框。
-You can assign your own user ID there easily, and other players can copy their user IDs here and send them to you for you to include them in the game. = 直接點擊“設定為目前玩家”就可自動填入自己的玩家ID。其他玩家則需在打開遊戲後點擊“複製玩家ID”按鈕將ID複製到剪貼簿，然後透過網路傳送給您，你可以在“開始新遊戲”界面將接收到的ID填入他們想扮演的文明的“Player ID”文字框內讓他們加入遊戲。
-Once you've created your game, enter this screen again to copy the Game ID and send it to the other players. = 當你建立了多人遊戲後，進入本界面並按下“複製遊戲ID”按鈕將遊戲ID複製到剪貼簿並透過網路分享給其他玩家。
+You can assign your own user ID there easily, and other players can copy their user IDs here and send them to you for you to include them in the game. = 直接點擊“設定為目前玩家”就可自動填入自己的玩家ID。其他玩家則需在打開遊戲後點擊“複製玩家ID”按鈕將ID複製到剪貼簿，然後透過網路傳送給您，你可以在“開始新遊戲”介面將接收到的ID填入他們想扮演的文明的“Player ID”文字框內讓他們加入遊戲。
+Once you've created your game, enter this screen again to copy the Game ID and send it to the other players. = 當你建立了多人遊戲後，進入本介面並按下“複製遊戲ID”按鈕將遊戲ID複製到剪貼簿並透過網路分享給其他玩家。
 Players can enter your game by copying the game ID to the clipboard, and clicking on the Join Game button = 其他玩家可以將接收到的遊戲ID複製到剪貼簿，並按下“加入遊戲”按鈕加入遊戲
 Game Speed = 遊戲速度
 Quick = 快速
@@ -495,8 +486,7 @@ Auto-build roads = 自動建造道(鐵)路
 Show minimap = 顯示小地圖
 Show pixel units = 顯示像素單位
 Show pixel improvements = 顯示像素設施
- # Requires translation!
-Enable nuclear weapons = 
+Enable nuclear weapons = 允許使用核武器
 Fontset = 字體設定
 
 # Notifications
@@ -515,8 +505,7 @@ Cannot provide unit upkeep for [unitName] - unit has been disbanded! = 無法為
 Work has started on [construction] = 開始建造/訓練：[construction]
 [cityName] cannot continue work on [construction] = [cityName]無法繼續建造/訓練[construction]
 [cityname] has expanded its borders! = [cityname]的邊界已經擴張！
- # Requires translation!
-Your Golden Age has ended. = 
+Your Golden Age has ended. = 你的黃金時代結束了
 [cityName] has been razed to the ground! = [cityName]已被夷為平地!
 We have conquered the city of [cityname]! = 我們已經佔領城市[cityname]
 An enemy [unit] has attacked [cityname] = 敵方的[unit]攻擊了[cityname]
@@ -558,8 +547,8 @@ You and [name] are no longer allies! = 您與[name]不再是盟友了！
 [cityName] has been disconnected from your capital! = [cityName]與您的首都的連接已經中斷！
 [civName] has accepted your trade request = [civName]接受了你的貿易請求
 [civName] has denied your trade request = [civName]拒絕了你的貿易請求
-[tradeOffer] from [otherCivName] has ended = 與[otherCivName]的[tradeOffer]協議已經結束
-[tradeOffer] to [otherCivName] has ended = 與[otherCivName]的[tradeOffer]協議已經結束
+[tradeOffer] from [otherCivName] has ended = [otherCivName]向我們供應[tradeOffer]的協議已經結束
+[tradeOffer] to [otherCivName] has ended = 我們向[otherCivName]供應[tradeOffer]的協議已經結束
 One of our trades with [nation] has ended = 我們與[nation]的一項贸易已經結束
 One of our trades with [nation] has been cut short = 我們與[nation]的一項貿易已被削减
 [nation] agreed to stop settling cities near us! = [nation]同意停止在我們附近建城！
@@ -630,7 +619,7 @@ Close = 關閉
 
 # City screen
 
-Exit city = 離開城市界面
+Exit city = 離開城市介面
 Raze city = 摧毀城市
 Stop razing city = 停止摧毀城市
 Buy for [amount] gold = 花費[amount]金錢購買
@@ -701,8 +690,7 @@ Landing = 登陸作戰
 Flanking = 側翼夾擊
 vs [unitType] = 對戰[unitType]
 Terrain = 地形修正
- # Requires translation!
-Hurry Research = 
+Hurry Research = 加速科技研究
 Conduct Trade Mission = 拓展貿易
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = 您與[civName]拓展貿易獲得[goldAmount]金錢和[influenceAmount]影響力！
 Hurry Wonder = 加速奇觀建造
@@ -1128,26 +1116,16 @@ Impassible = 不能通行
 
 # Natural Wonders
 
- # Requires translation!
-Barringer Crater = 
- # Requires translation!
-Grand Mesa = 
- # Requires translation!
-Great Barrier Reef = 
- # Requires translation!
-Krakatoa = 
- # Requires translation!
-Mount Fuji = 
- # Requires translation!
-Old Faithful = 
- # Requires translation!
-Rock of Gibraltar = 
- # Requires translation!
-Cerro de Potosi = 
- # Requires translation!
-El Dorado = 
- # Requires translation!
-Fountain of Youth = 
+Barringer Crater = 巴林傑隕石坑
+Grand Mesa = 大平頂山
+Great Barrier Reef = 大堡礁
+Krakatoa = 喀拉喀托火山
+Mount Fuji = 富士山
+Old Faithful = 老忠實間歇泉
+Rock of Gibraltar = 直布羅陀巨岩
+Cerro de Potosi = 富饒山
+El Dorado = 黃金國
+Fountain of Youth = 青春之泉
 
 # Resources
 
@@ -1342,16 +1320,14 @@ B17 = B-17“空中堡壘”
 Fighter = 戰鬥機
 Zero = 零式戰鬥機
 Helicopter Gunship = 武裝直昇機
- # Requires translation!
-Atomic Bomb = 
+Atomic Bomb = 原子彈
 Nuclear Missile = 核導彈
 Great Artist = 大藝術家
 Unbuildable = 不可建立單位
 Can start an 8-turn golden age = 可以開啟8回合黃金時代
 Can build improvement: Landmark = 可以建造設施：風景地標
 Great Scientist = 大科學家
- # Requires translation!
-Can hurry technology research = 
+Can hurry technology research = 可以加速科技研究
 Can build improvement: Academy = 可以建造設施：學院
 Great Merchant = 大商業家
 Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = 可以拓展與城邦的貿易，獲得大筆金錢和[influenceAmount]影響力
@@ -1451,5 +1427,4 @@ Ambush I = 伏擊I級
 Ambush II = 伏擊II級
 Haka War Dance = 哈卡戰舞
 -10% combat strength for adjacent enemy units = 相鄰的敵方單位-10%戰鬥力
- # Requires translation!
-Rejuvenation = 
+Rejuvenation = 返老还童
