--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -691,7 +691,7 @@ Landing = Atterraggio
 Flanking = Attacco ai fianchi
 vs [unitType] = contro [unitType]
 Terrain = Terreno
-Hurry Research = Accelera icerca
+Hurry Research = Accelera ricerca
 Conduct Trade Mission = Conduci missione commerciale
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = La tua missione commerciale con [civName] ti ha fruttato [goldAmount] Oro e [influenceAmount] Influenza!
 Hurry Wonder = Accellera Meraviglia
@@ -763,7 +763,7 @@ Raze = Radi al suolo
 Razing the city annexes it, and starts razing the city to the ground. = Questa opzione ti permetterà di annettere la città e poi di raderla al suolo.
 The population will gradually dwindle until the city is destroyed. = La popolazione diminuirà gradualmente fino alla distruzione della città.
 Destroy = Distruggi
-Destroying the city instantly razes the city to the ground. = Questa opzione ti consente di radere immediatamente al suolo la città
+Destroying the city instantly razes the city to the ground. = Questa opzione ti consente di radere immediatamente al suolo la città.
 Remove your troops in our border immediately! = Esigiamo che rimuoviate i vostri soldati dai nostri confini!
 Sorry. = Ti porgiamo le nostre scuse.
 Never! = Non sia mai!
@@ -1124,7 +1124,7 @@ Krakatoa = Krakatoa
 Mount Fuji = Monte Fuji
 Old Faithful = Old Faithful
 Rock of Gibraltar = Rocca di Gibilterra
-Cerro de Potosi = Cerro Rico
+Cerro de Potosi = Cerro Rico de Potosí
 El Dorado = El Dorado
 Fountain of Youth = Fonte della giovinezza
 
